development of indent has not produced a version (through 2.2.7) which I find
useful since most of the differences I see between their respective outputs are
new bugs in the 2.x version.  And it still does not fix the bugs that I have
noticed myself in indent.  Perhaps the next maintainer of indent will know
something about regression testing -T.Dickey 2002/4/7

2002-04-14
	+ generate gperf.c and gperf-cc.c (as in 2.2.7), but align with 2.0
	  tables, to provide a known starting point.

	+ replace incorrect cast for chartype[] array indices.

	+ generate chartype[] at runtime.

	+ fake a semicolon, i.e., update state information, between ")" and an
	  immediately-following "}".  This also is needed to make xterm's
	  if_XXX macros indent properly.

	+ prevent forced newline between "({" or "})" characters, to treat
	  gcc compound statement properly as well as xterm's if_XXX macros.

	+ rewrite warnings for broken lines, showing the column and token at
	  which they break.

	+ make error/warnings more consistent, moving "Warning" and "Error"
	  keywords inside message() and changing that so that warning messages
	  applied to a given line are only written if -v is given.

	+ use input-line number computed in fill_buffer() rather than output,
	  since that does make previewing indent's changes easier.

2002-04-09
	+ drop 'out_coms' variable, using 'com_lines' instead in the summary
	  printed by the -v option.

	+ change logic for line_no, to record it as the output line number,
	  and correct some places where it was not counted, e.g., within
	  multi-line comments and at a backslash before a newline.  Line 
	  numbers are not computed correctly either way with indent 2.2.7

	+ minor cleanup of configure script to use $AWK, $CFLAGS and $LDFLAGS
	  variables.

2002-04-07

	+ convert to ANSI C.

	+ change message() output format to make it consistent with other
	  applications such as 'grep', i.e., filename:linenumber:message

2000-01-12
